--- a/Lab02/index2.html
+++ b/Lab02/index2.html
@@ -129,6 +129,11 @@
     <p>&copy; 2023 Plataforma Educativa Universidad Central</p>
     <p>Contacto: <a href="mailto:fabian.chinchilla@uc.ac.cr">Fabian</p>
   </footer>
+  <script>
+        function activarEstilos() {
+            document.body.classList.toggle('styled');
+        }
+    </script>
 </body>
 
 </html>
