--- a/Lab02/index (1).html
+++ b/Lab02/index (1).html
@@ -5,60 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab 02</title>
-    <style>
-    .btn {
-        background-color: indianred;
-        border: pink 1px solid;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-    }
-    .styled table {
-            border-collapse: collapse;
-            width: 100%;
-        }
- 
-        .styled th, .styled td {
-            border: 1px solid #7c0d0d;
-            padding: 8px;
-        }
- 
-        .styled th {
-            background: #0b3c5d;
-            color: white;
-        }
- 
-        .styled a {
-            color: #0b3c5d;
-            font-weight: bold;
-        }
-        .styled img {
-    display: block;
-    margin: 20px auto;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-    max-width: 100%;
-}
-    
-    .styled {
-        background-color: rgb(255, 214, 231);
-        color: black;
-        font-family: Arial, sans-serif;
-    }
-    .btn:hover{
-        background-color: hsl(118, 84%, 48%);
-    }
-    </style>
+   
     <meta charset="UTF-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab 02</title>
 </head>
-
+<link rel="stylesheet" href="estilos.css" />
 <body>
     <button class="btn" onclick="activarEstilos()">Ver antes / después</button>
     <h1>Lab 02</h1>
@@ -124,9 +76,7 @@
 
     <p>Para más información, visita el sitio web oficial.</p>
     <script>
-        function activarEstilos() {
-            document.body.classList.toggle('styled');
-        }
+        <script src="main.js" />
     </script>
 </body>
 
