--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 02</title>
+    <title>PROGRAMACIÓN DE INTERNET</title>
 </head>
 <body>
 
     <h1>Lab 02</h1>
-    <h2>Lab 02</h2>
-    <h3>Lab 02</h3>
+    <h2>Lab 03</h2>
+    <h3>Lab 04</h3>
 
 </body>
 </html>
