Update HTML and CSS files for Lab03, add new structure and styles, and include Bootstrap for improved layout

--- a/Lab03/cursos.html
+++ b/Lab03/cursos.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Productos</title>
-  <link rel="stylesheet" href="estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LAB-03</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
+
+    <!-- encabezado de cuerpo de la pagina-->
     <header>
-    <h1 id="main-title" class="title">Plataforma Educativa</h1>
-    <h2 class="title">Universidad Central</h2>
-    <!-- menu -->
-    <nav class="nav-menu">
-      <ul class="nav-list">
-        <li class="menu-item"><a href="index.html">Inicio</a></li>
-        <li class="menu-item"><a href="cursos.html">Cursos</a></li>
-        <li class="menu-item"><a href="contacto.html">Contacto</a></li>
-        <li class="menu-item"><a href="ayuda.html">Ayuda</a></li>
-      </ul>
-    </nav>
-  </header>
- 
-  Producto
-  <form action="">
-    <div class="form-group">
-      <input type="text" placeholder="Nombre del estudiante " class="form-input">
-    </div>
- 
-    <div class="form-group">
-      <input type="number" placeholder="Precio" class="form-input">
-    </div>
- 
-    <button type="submit" class="submit-button">Agregar</button>
-  </form>
+        <h1 id="main-title" class="title">Plataforma Educativa</h1>
+        <h2 class="title">Universidad Central</h2>
+        <!-- menu -->
+        <nav class="nav-menu">
+            <ul class="nav-list">
+                <li class="menu-item"><a href="index.html">Inicio</a></li>
+                <li class="menu-item"><a href="cursos.html">Cursos</a></li>
+                <li class="menu-item"><a href="contacto.html">Contacto</a></li>
+                <li class="menu-item"><a href="ayuda.html">Ayuda</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <!-- bloque de formulario de registro -->
+        <section>
+        </section>
+
+        <!-- bloque de video incrustado -->
+        <section>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/LXb3EKWsInQ?si=KRC7kR0cZzGevNSB&amp;start=61"
+                title="Video Incrustado" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
+            </iframe>
+        </section>
+
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Plataforma Educativa Universidad Central</p>
+        <p>Contacto: <a href="mailto:fabian.chinchilla@uc.ac.cr">Fabian</a></p>
+    </footer>
+
 </body>
 </html>
