--- a/Lab03/index 1.html
+++ b/Lab03/index 1.html
@@ -1,97 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LAB-03</title>
-  
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>LAB-03</title>
+<link rel="stylesheet" href="estilos.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-<link rel="stylesheet" href="estilos.css" />
+ 
 <body>
-
-  <!-- encabezado de cuerpo de la pagina-->
-  <header>
-    <h1 id=".title">Plataforma Educativa Universidad Central</h1>
-    <h2>Universidad Central</h2>
-  </header>
-  <main>
-    <section>
-      <form action="#" method="post">
-        <fieldset>
-          <legend>Registro de Usuario</legend>
-
+<!-- encabezado de cuerpo de la pagina-->
+<header>
+<h1 id="main-title" class="title">Plataforma Educativa</h1>
+<h2 class="title">Universidad Central</h2>
+<!-- menu -->
+<nav class="nav-menu">
+<ul class="nav-list">
+<li class="menu-item"><a href="index.html">Inicio</a></li>
+<li class="menu-item"><a href="cursos.html">Cursos</a></li>
+<li class="menu-item"><a href="contacto.html">Contacto</a></li>
+<li class="menu-item"><a href="ayuda.html">Ayuda</a></li>
+</ul>
+</nav>
+</header>
+ 
+  <main class="container">
+ 
+    <!-- bloque de formulario de registro -->
+<section class="card p-4 mx-auto my-4" >
+<form action="#" method="post">
+<fieldset>
+<legend>Registro de Usuario</legend>
+ 
           <div class="form-group">
-            <label for="username">Nombre de Usuario:</label>
-            <input class="form-input" type="text" id="username" name="username" required>
-
-            <label for="email">Correo Electrónico:</label>
-            <input class="form-input" type="email" id="email" name="email" required>
-
-            <label for="password">Contraseña:</label>
-            <input class="form-input" type="password" id="password" name="password" required>
-          </div>
-
-
-
+<label class="form-label" for="username">Nombre de Usuario:</label>
+<input class="form-control" type="text" id="username" name="username" required>
+ 
+            <label class="form-label" for="email">Correo Electrónico:</label>
+<input class="form-control" type="email" id="email" name="email" required>
+ 
+            <label class="form-label" for="password">Contraseña:</label>
+<input class="form-control" type="password" id="password" name="password" required>
+</div>
+ 
           <fieldset>
-            <legend>Genero</legend>
-            <div>
-              <div>
-                <input type="radio" value="m" name="genero" id="g-m">
-                <label for="g-m">Masculino</label>
-              </div>
-              <div>
-                <input type="radio" value="f" name="genero" id="g-f">
-                <label for="g-f">Femenino</label>
-              </div>
-              <div>
-                <input type="radio" value="o" name="genero" id="g-o">
-                <label for="g-o">Otro</label>
-              </div>
-              <div>
-                <input type="radio" value="n" name="genero" id="g-n">
-                <label for="g-n">Prefiero no decirlo</label>
-              </div>
-            </div>
-          </fieldset>
-
+<legend>Genero</legend>
+<div>
+<div>
+<input type="radio" value="m" name="genero" id="g-m">
+<label for="g-m">Masculino</label>
+</div>
+<div>
+<input type="radio" value="f" name="genero" id="g-f">
+<label for="g-f">Femenino</label>
+</div>
+<div>
+<input type="radio" value="o" name="genero" id="g-o">
+<label for="g-o">Otro</label>
+</div>
+<div>
+<input type="radio" value="n" name="genero" id="g-n">
+<label for="g-n">Prefiero no decirlo</label>
+</div>
+</div>
+</fieldset>
+ 
           <fieldset>
-            <legend>Seleccione sus intereses:</legend>
-            <div>
-              <div>
-                <input type="checkbox" name="intereses" id="interes1" value="programacion">
-                <label for="interes1">Programación</label>
-              </div>
-              <div>
-                <input type="checkbox" name="intereses" id="interes2" value="diseño">
-                <label for="interes2">Diseño Gráfico</label>
-              </div>
-              <div>
-                <input type="checkbox" name="intereses" id="interes3" value="marketing">
-                <label for="interes3">Marketing Digital</label>
-              </div>
-              <div>
-                <input type="checkbox" name="intereses" id="interes4" value="ciencia">
-                <label for="interes4">Ciencia de Datos</label>
-              </div>
-          </fieldset>
-
-          <button class="submit-button" type="submit">Registrar</button>
-        </fieldset>
-      </form>
-    </section>
-    <section>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/LXb3EKWsInQ?si=KRC7kR0cZzGenVSb&amp;start=61"
+<legend>Seleccione sus intereses:</legend>
+<div>
+<div>
+<input type="checkbox" name="intereses" id="interes1" value="programacion">
+<label for="interes1">Programación</label>
+</div>
+<div>
+<input type="checkbox" name="intereses" id="interes2" value="diseño">
+<label for="interes2">Diseño Gráfico</label>
+</div>
+<div>
+<input type="checkbox" name="intereses" id="interes3" value="marketing">
+<label for="interes3">Marketing Digital</label>
+</div>
+<div>
+<input type="checkbox" name="intereses" id="interes4" value="ciencia">
+<label for="interes4">Ciencia de Datos</label>
+</div>
+</fieldset>
+ 
+          <button class="btn btn-primary w-100 my-2" type="submit">Registrar</button>
+</fieldset>
+</form>
+</section>
+ 
+    <!-- bloque de video incrustado -->
+<section>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LXb3EKWsInQ?si=KRC7kR0cZzGenVSb&amp;start=61"
         title="Video Incrustado" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section>
-  </main>
+</section>
+</main>
+ 
   <footer>
-    <p>&copy; 2023 Plataforma Educativa Universidad Central</p>
-    <p>Contacto: <a href="mailto:fabian.chinchilla@uc.ac.cr">Fabian</p>
-  </footer>
+<p>&copy; 2023 Plataforma Educativa Universidad Central</p>
+<p>Contacto: <a href="mailto:fabian.chinchilla@uc.ac.cr">Fabian</a></p>
+</footer>
 </body>
-
 </html>
