--- a/Proyecto/Estilos.html
+++ b/Proyecto/Estilos.html
@@ -1,7 +1,7 @@
 <style>
     body{
         font-family: Arial, sans-serif;
-        background:#f2f4f8;
+        background:#90c4d0;
         margin:40px;
     }
 
@@ -10,11 +10,11 @@
     }
 
     .seccion{
-        background:white;
+        background:rgb(194, 171, 171);
         padding:20px;
         margin-bottom:25px;
         border-radius:10px;
-        box-shadow:0 0 10px rgba(0,0,0,0.1);
+        box-shadow:0 0 10px rgba(146, 38, 38, 0.1);
     }
 
     input, select{
@@ -33,6 +33,6 @@
     }
 
     button:hover{
-        background:#0056b3;
+        background:#16eb0b;
     }
 </style>
