--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROGRAMACIÓN DE INTERNET</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Laboratorios</title>
 </head>
 <body>
-
-    <h1>Lab 02</h1>
-    <h2>Lab 03</h2>
-    <h3>Lab 04</h3>
-
+  <h1>Laboratorios</h1>
+  <p>Bienvenido a la página principal de los laboratorios.</p>
+  <a href="Lab02/">Laboratorio 02</a>
 </body>
 </html>
