--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laboratorios</title>
+  <title>Laboratorios de Programación de Internet</title>
 </head>
 <body>
   <h1>Laboratorios</h1>
   <p>Bienvenido a la página principal de los laboratorios.</p>
   <a href="Lab02/">Laboratorio 02</a>
+    <a href="Lab03/">Laboratorio 03</a>
+    <a href="Lab04/">Laboratorio 04</a>
+    <a href="Lab05/">Laboratorio 05</a>
+    <a href="Proyecto/">Laboratorio 06</a>
+
 </body>
 </html>
